Regnum Online UBO break after game update
Submitted by Rafael Castillo
Assigned to Default DRI bug account
Description
game debug output:
[02/10/2012 19:15:47] [ShaderGL][shader_gl_parser.cpp(1512)] Shader material.basic_specular_at_ts validation failed
[02/10/2012 19:15:47] [ShaderGL][shader_gl_parser.cpp(392)] Program <forwardskinning_pass_0>
(material.basic_specular_at_ts) info log:
error: linking with uncompiled shader
[02/10/2012 19:15:47] [logger.cpp(72)] Shader material.basic_specular_at_ts link failed
[02/10/2012 19:15:47] [logger.cpp(72)] GL_INVALID_OPERATION in glGetUniformLocation(program not linked)
[02/10/2012 19:15:47] [logger.cpp(72)] GL_INVALID_OPERATION in glGetUniformLocation(program not linked)
[02/10/2012 19:15:47] [logger.cpp(72)] GL_INVALID_OPERATION in glGetUniformLocation(program not linked)
[02/10/2012 19:15:47] [logger.cpp(72)] GL_INVALID_OPERATION in glGetUniformLocation(program not linked)
OpenGL vendor string: X.Org OpenGL renderer string: Gallium 0.4 on AMD RV770 OpenGL version string: 3.0 Mesa 9.1-devel (git-00d80b3a) OpenGL shading language version string: 1.30 OpenGL extensions:
i have an trace, if needed tell to upload it somewhere(is almost 60mb compressed)
Version: git