src/mesa/state_tracker/st_extensions.c
@@ -1133,6 +1133,8 @@ void st_init_extensions(struct pipe_screen *screen,
       consts->ForceGLSLVersion = options->force_glsl_version;
    }
 
+   consts->AllowExtraPPTokens = options->allow_extra_pp_tokens;
+
    consts->AllowHigherCompatVersion = options->allow_higher_compat_version;
 
    consts->ForceGLSLAbsSqrt = options->force_glsl_abs_sqrt;
